fix: colors + dashboard overflow behavior

--- a/src/components/dashboard/dashboard.scss
+++ b/src/components/dashboard/dashboard.scss
@@ -4,6 +4,7 @@
 	gap: 3rem;
 
 	padding: 4rem 3rem;
+	overflow: scroll;
 
 	&__heading {
 		display: flex;
