--- a/src/components/graphs/score.scss
+++ b/src/components/graphs/score.scss
@@ -4,7 +4,7 @@
 
 	border-radius: 0.5rem;
 
-	background-color: #ececec;
+	background-color: #fbfbfb;
 
 	svg {
 		width: 100%;
@@ -17,6 +17,7 @@
 
 		font-size: 1.25rem;
 		font-weight: 500;
+		color: #20253A;
 	}
 
 	&__text {
@@ -35,7 +36,7 @@
 		b {
 			font-size: 1.625rem;
 			font-weight: 700;
-			color: #0c0c0c;
+			color: #282D30;
 		}
 	}
 }
