--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -53,7 +53,7 @@ body {
 	grid-template-columns: auto 1fr;
 	grid-template-rows: auto 1fr;
 
-	min-height: 100vh;
+	height: 100vh;
 
-	background-color: #fafafa;
+	background-color: #fff;
 }
